clusters/hive/apps/dugulan-com/k8s-manifests/wordpress-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  labels:
    k8s-app: wordpress
  namespace: dugulan-com
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      k8s-app: wordpress
  template:
    metadata:
      labels:
        k8s-app: wordpress
    spec:
      serviceAccountName: wordpress
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
      containers:
        - image: bitnami/wordpress:6.8.0
          imagePullPolicy: Always
          name: wordpress
          resources:
            requests:
              cpu: 50m
              memory: 900Mi
            limits:
              memory: 900Mi
          volumeMounts:
            - mountPath: /bitnami/wordpress
              name: wordpress
      volumes:
        - name: wordpress
          persistentVolumeClaim:
            claimName: wordpress
