clusters/hive/apps/dugulan-com/k8s-manifests/wordpress-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: wordpress
  name: wordpress
  namespace: dugulan-com
spec:
  type: ClusterIP
  ports:
    - name: wordpress
      port: 8443
      protocol: TCP
      targetPort: 8443
  selector:
    k8s-app: wordpress
  sessionAffinity: None
